# nushell-verifier

./: .gitignore  CLAUDE.md  README.md  mise.toml  pyproject.toml
src/nushell_verifier/: __init__.py  analyzer.py  cache.py  cli.py  config.py  github_client.py  llm_client.py  main.py  models.py  progress.py  reporter.py  scanner.py  version_manager.py
test_scripts/: already_compatible.nu  example.nu  hello.nu  needs_analysis.nu
tests/: __init__.py  test_analyzer_progress.py  test_cache.py  test_cache_integration.py  test_cli_progress.py  test_github_blog_path.py  test_github_client.py  test_github_integration.py  test_llm_client.py  test_progress.py  test_version_manager.py  test_version_skip.py
