[project]
name = "nushell-verifier"
version = "0.1.0"
description = "CLI tool to check NuShell script compatibility with different NuShell versions"
readme = "README.md"
authors = [
    { name = "Boaz Yaniv", email = "boazyan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.0.0",
    "httpx>=0.25.0",
    "toml>=0.10.2",
    "click>=8.0.0",
    "alive-progress>=3.0.0",
]

[project.scripts]
nushell-verifier = "nushell_verifier:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
